# Lost-Sphere

./: CMakeLists.txt  readme.md
assets/tiles/: LostSphere.csv  LostSphere.tmx  level1-1.tsx  overworld.csv  overworld.tmx  overworld.tsx
include/: Anim.h  Assets.h  Balance.h  Boss.h  BossFuria.h  BossOrgulho.h  BossSilencio.h  BossTempo.h  GameState.h  Scene.h  SceneManager.h  SpriteSheet.h  Text.h  TileMap.h
src/: Assets.cpp  GameState.h  HeroAnim.h  SceneManager.cpp  SoundManager.cpp  SoundManager.h  SpriteSheet.cpp  TileMap.cpp  main.cpp
src/scenes/: BattleScene.cpp  BattleScene.h  BossIntroScene.cpp  BossIntroScene.h  MenuScene.cpp  MenuScene.h  MessageBox.h  OverworldScene.cpp  OverworldScene.h  SelectSetScene.cpp  SelectSetScene.h
